# kui

./: .gitignore  CMakeLists.txt  README.md  deps.cmake
.github/workflows/: build-and-test.yml
game/: Player.cpp  Player.h
kui/: CMakeLists.txt  Engine.cpp  Engine.h  EngineLoop.cpp  EngineLoop.h  IObject.cpp  IObject.h  kuiPCH.h
kui/core/: CoreGlobals.cpp  CoreGlobals.h  FrameTimer.cpp  FrameTimer.h  PlatformTimer.h
kui/core/platform/osx/: OSXPlatformTimer.cpp  OSXPlatformTimer.h
kui/modules/events/: Event.h
kui/modules/input/: MouseButton.h
kui/modules/window/: Window.cpp  Window.h
runtime/: main.cpp
sample_game/: CMakeLists.txt  Player.cpp  Player.h
src/: CMakeLists.txt  deps.cmake  main.cpp
src/core/: CoreGlobals.cpp  CoreGlobals.h  Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  FrameTimer.cpp  FrameTimer.h  IMainLoop.h  Key.h  Log.cpp  Log.h  MouseButton.h
src/main/: main.cpp
src/platform/: Key.h  NativeWindow.cpp  NativeWindow.h  PlatformEvent.h  PlatformTimer.h  Window.cpp  Window.h
src/platform/osx/: OSXPlatformTimer.cpp
src/scene/: SceneLoop.cpp  SceneLoop.h
src/subsystems/renderer/: Renderer.cpp  Renderer.h
src/subsystems/window/: Window.cpp  Window.h
test/: test_FrameTimer.cpp  test_Log.cpp  test_NativeWindow.cpp  test_PlatformTimer.cpp
